<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="horizontal"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/DisplaySurface"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/display_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_hair_style" />

        <RadioButton
            android:id="@+id/radioHairButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hair" />

        <Spinner
            android:id="@+id/spinnerHairChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/green" />

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/red" />

        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blue" />

        <SeekBar
            android:id="@+id/seekBar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255" />

        <RadioButton
            android:id="@+id/radioEyeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eye" />

        <RadioButton
            android:id="@+id/radioSkinButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/skin" />

        <Button
            android:id="@+id/randomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/randomize" />
    </LinearLayout>
</LinearLayout>